[gd_scene load_steps=15 format=3 uid="uid://ckij8dukvmh82"]

[ext_resource type="Script" path="res://scenes/level_1.gd" id="1_6vy8p"]
[ext_resource type="Material" uid="uid://ck5yy6bnnfhoe" path="res://environment/test_ground.tres" id="1_v08iv"]
[ext_resource type="PackedScene" uid="uid://buukchwddsq16" path="res://player_tank/player_tank.tscn" id="2_eqnba"]
[ext_resource type="PackedScene" uid="uid://bi00ua5nemag2" path="res://enemies/enemy_tank.tscn" id="3_g4lg8"]
[ext_resource type="PackedScene" uid="uid://2ikvy6rs6ql4" path="res://Collectibles/health_crate.tscn" id="5_jojc4"]
[ext_resource type="PackedScene" uid="uid://copk8kj3vfvb5" path="res://Collectibles/shell_crate.tscn" id="6_a4pc4"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_b4fk2"]
sky_top_color = Color(0.352941, 0.745098, 0.964706, 1)
sky_horizon_color = Color(0.638235, 0.728525, 0.774426, 1)
ground_horizon_color = Color(0.638235, 0.728525, 0.774426, 1)

[sub_resource type="Sky" id="Sky_3scxv"]
sky_material = SubResource("ProceduralSkyMaterial_b4fk2")

[sub_resource type="Environment" id="Environment_kury7"]
background_mode = 2
sky = SubResource("Sky_3scxv")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="NavigationMesh" id="NavigationMesh_txjhr"]
vertices = PackedVector3Array(-5.75, 1, -15.75, -4.25, 1, -16.25, -4.25, 1, -48, -48, 1, -7.25, -13.25, 1, -7.25, -12.75, 1, -8.75, -12.75, 1, -8.75, -5.75, 1, -15.75, -4.25, 1, -48, -48, 1, -48, -48, 1, -7.25, -4.25, 1, -48, -4.25, 1, -16.25, -2.75, 1, -15.75, -4.25, 1, -48, -2.75, 1, -15.75, -1.25, 1, -14.25, -4.25, 1, -48, -1.25, 1, -14.25, -0.75, 1, -12.75, 48, 1, -12.75, 48, 1, -48, -8.25, 1, -4, -7.5, 1, -2.75, -4.5, 1, -3, -1.25, 1, -11, -2.75, 1, 1.5, 5.5, 1, 10.5, 6.75, 1, 11.25, -1.25, 1, -11, -4.5, 1, -3, -3.25, 1, -2.25, -1.25, 1, -11, -3.25, 1, -2.25, -2.75, 1, -1.25, -0.75, 1, -12.75, -3.25, 1, 2.25, 2, 1, 11, 2.75, 1, 10.5, -2.75, 1, 1.5, -3.25, 1, 2.25, 2.75, 1, 10.5, 5.5, 1, 10.5, -0.75, 1, -12.75, -2.75, 1, -1.25, -2.75, 1, 1.5, 6.75, 1, 11.25, 48, 1, 13, 48, 1, -12.75, 6.75, 1, 11.25, 7.25, 1, 13, 48, 1, 13, -8.5, 1, -2.25, -7.5, 1, -2.75, -8.25, 1, -4, -10.25, 1, -3.5, -12.25, 1, 13.5, -9.75, 1, 13.5, -8.5, 1, 2.25, -9, 1, -1.25, -8.5, 1, -2.25, -10.25, 1, -3.5, -11.25, 1, -4, -12.25, 1, 13.5, -8.5, 1, 2.25, -9, 1, 1.5, -13.25, 1, 14, -9, 1, -1.25, -11.25, 1, -4, -12.75, 1, -5.5, -14, 1, 16, -13.25, 1, 14, -9, 1, 1.5, -14, 1, 16, -12.75, 1, -5.5, -13.25, 1, -7.25, -48, 1, -7.25, -48, 1, 16, -7.75, 1, 15.5, 1.5, 1, 15, 1, 1, 13.75, -8.5, 1, 14, -7, 1, 3.25, -8.5, 1, 2.25, -9.75, 1, 13.5, -8.5, 1, 14, 1, 1, 13.75, 2, 1, 11, -3.25, 1, 2.25, -4.5, 1, 3.25, 1, 1, 12.25, 1, 1, 13.75, 1, 1, 12.25, -4.5, 1, 3.25, -7, 1, 3.25, 6.25, 1, 15.25, 4, 1, 15.75, 4, 1, 48, 7.25, 1, 13, 6.25, 1, 15.25, 4, 1, 48, 48, 1, 48, 48, 1, 13, 1.5, 1, 15, -7.75, 1, 15.5, -7.75, 1, 16.75, 2.75, 1, 15.75, 1.5, 1, 15, -7.75, 1, 16.75, -8.75, 1, 18.25, 4, 1, 15.75, 2.75, 1, 15.75, -8.75, 1, 18.25, -11, 1, 18.75, -11, 1, 48, 4, 1, 48, -11, 1, 48, -11, 1, 18.75, -13.25, 1, 18.25, -11, 1, 48, -13.25, 1, 18.25, -14, 1, 16, -48, 1, 16, -48, 1, 48)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(5, 4, 3), PackedInt32Array(7, 6, 8), PackedInt32Array(8, 6, 10), PackedInt32Array(8, 10, 9), PackedInt32Array(13, 12, 11), PackedInt32Array(16, 15, 14), PackedInt32Array(18, 17, 19), PackedInt32Array(19, 17, 20), PackedInt32Array(20, 17, 21), PackedInt32Array(23, 22, 24), PackedInt32Array(24, 22, 25), PackedInt32Array(26, 28, 27), PackedInt32Array(29, 31, 30), PackedInt32Array(33, 32, 34), PackedInt32Array(34, 32, 35), PackedInt32Array(38, 37, 36), PackedInt32Array(40, 39, 41), PackedInt32Array(41, 39, 42), PackedInt32Array(44, 43, 45), PackedInt32Array(45, 43, 46), PackedInt32Array(46, 43, 47), PackedInt32Array(47, 43, 48), PackedInt32Array(49, 51, 50), PackedInt32Array(53, 52, 54), PackedInt32Array(54, 52, 55), PackedInt32Array(58, 57, 56), PackedInt32Array(60, 59, 61), PackedInt32Array(61, 59, 62), PackedInt32Array(64, 63, 65), PackedInt32Array(65, 63, 66), PackedInt32Array(68, 67, 69), PackedInt32Array(69, 67, 72), PackedInt32Array(69, 72, 71), PackedInt32Array(69, 71, 70), PackedInt32Array(74, 73, 75), PackedInt32Array(75, 73, 77), PackedInt32Array(75, 77, 76), PackedInt32Array(79, 78, 80), PackedInt32Array(80, 78, 81), PackedInt32Array(85, 84, 86), PackedInt32Array(86, 84, 82), PackedInt32Array(82, 84, 83), PackedInt32Array(88, 87, 89), PackedInt32Array(89, 87, 90), PackedInt32Array(92, 91, 93), PackedInt32Array(93, 91, 94), PackedInt32Array(97, 96, 95), PackedInt32Array(99, 98, 100), PackedInt32Array(100, 98, 102), PackedInt32Array(100, 102, 101), PackedInt32Array(105, 104, 103), PackedInt32Array(107, 106, 108), PackedInt32Array(108, 106, 109), PackedInt32Array(111, 110, 112), PackedInt32Array(112, 110, 113), PackedInt32Array(113, 110, 114), PackedInt32Array(114, 110, 115), PackedInt32Array(116, 118, 117), PackedInt32Array(120, 119, 121), PackedInt32Array(121, 119, 122), PackedInt32Array(122, 119, 123)]
agent_radius = 2.0

[sub_resource type="BoxMesh" id="BoxMesh_5kd1b"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dk7vn"]

[sub_resource type="BoxMesh" id="BoxMesh_aj7l6"]
size = Vector3(10, 0.1, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_0qeht"]
size = Vector3(10, 0.1, 10)

[node name="Level1" type="Node3D"]
script = ExtResource("1_6vy8p")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kury7")

[node name="PlayerTank" parent="." groups=["player"] instance=ExtResource("2_eqnba")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.38488, 1.68043, 1.1244)

[node name="EnemyTank" parent="." instance=ExtResource("3_g4lg8")]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, -10, 2, -17)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.611527, 0.159098, -0.775063, 0, 0.979575, 0.201079, 0.791224, 0.122965, -0.599037, -0.459754, 6.39808, 0)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_txjhr")

[node name="obstacle_tmp" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -6, 2, 0.123876)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/obstacle_tmp"]
mesh = SubResource("BoxMesh_5kd1b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/obstacle_tmp"]
shape = SubResource("BoxShape3D_dk7vn")

[node name="obstacle_tmp2" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 2, -11.8761)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/obstacle_tmp2"]
transform = Transform3D(1.41421, 0, -7.07107, 0, 1, 0, 1.41421, 0, 7.07107, -1, 0, 2)
mesh = SubResource("BoxMesh_5kd1b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/obstacle_tmp2"]
shape = SubResource("BoxShape3D_dk7vn")

[node name="Ground" type="MeshInstance3D" parent="NavigationRegion3D"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)
material_override = ExtResource("1_v08iv")
mesh = SubResource("BoxMesh_aj7l6")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D/Ground"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Ground/StaticBody3D"]
shape = SubResource("BoxShape3D_0qeht")

[node name="HealthCrate" parent="NavigationRegion3D" instance=ExtResource("5_jojc4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11, 1, 16)

[node name="ShellCrate" parent="NavigationRegion3D" instance=ExtResource("6_a4pc4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1, 13)

[node name="ObjectiveCheckTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="ObjectiveCheckTimer" to="." method="_on_objective_check_timer_timeout"]
